examples/test/testpolicy2513.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2513
  namespace: namespace186
spec:
  podSelector:
    matchLabels:
      key19: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value2
          key49: value11
      podSelector:
        matchLabels:
          key16: value14
          key4: value12
          key38: value24
